updated the autorun shell script